@@ -3,7 +3,9 @@ AUX fix-fopen.patch 7499 RMD160 951eb5262328ac0096e517026219b717a94319e5 SHA1 a1
 AUX spmfilter 410 RMD160 f273c346ff4e23262f89d2cdd11196cdbdb39e55 SHA1 6813c84ba36bf8fb59ac5d1486eaba4b46634365 SHA256 935d12f8d2f758878f0021d8643b549f480f3f30b7a6d8deab6a4f1a74b070d0
 AUX spmfilter.conf 335 RMD160 6c66ed2e3a5fe18a041c00ca997ee1aec5d39967 SHA1 465d1e873f4b27b3d42387de607faea5a33a4d1d SHA256 cc27cb0f90bbefea83828f6d8d68d3bb3c8d03a6caeed87674e59cfc6715db5c
 DIST spmfilter-0.4.0.tar.gz 52689 RMD160 4db13a65f9f4e38b158a11f40b61284fda268a9d SHA1 4d90d4d3a8646b5dff54ccfa1cdfa181469b18bb SHA256 c566c199bd1e4b59dff8f9a186ccaa3b951bc2f2837f838723c8dbdfcc4a3eeb
+DIST spmfilter-0.4.2.tar.gz 54418 RMD160 87331ba7e8f31b68ba0985cb4c8401f1222626ee SHA1 72508786ad712bca571eed48011a1b5308792746 SHA256 1f9fdcbbac3f1301ab0bf2803bb699fa2e9a8075d78d158d96e2d066c3124d02
 EBUILD spmfilter-0.4.0.ebuild 1481 RMD160 8501de0a86b98e40d7505df6a3507ad8df0fb05f SHA1 973eb2aadcdbd286c7738f3fbb28c2538e3a2ba9 SHA256 a4b281fbc44eacdaa0c56dc54b8ac5ffb826f240f2332e4560946ab645ca5f55
+EBUILD spmfilter-0.4.2.ebuild 1388 RMD160 cc66718a879feef87cc90b8cbce667efc85195e1 SHA1 abd64ca856a14453e54e87c39140fa093af05724 SHA256 1175e9df6f648fa4189e637292b2059804264bf58e353c732b355497de29cb0d
 EBUILD spmfilter-9999.ebuild 1399 RMD160 c8c50c75af396fa1efa9f2ca0d20d316cc76071d SHA1 7008bf3bfdc60a15d3f42b6327ab6d589a34da30 SHA256 49c436bdde29ddcadc71904f1442400af3f892605818c3a26f4fb673cc9aee92
-MISC ChangeLog 619 RMD160 571980f4f07c736825cb629dd55895925e98296e SHA1 1c22ff6fb5fc157255f0bed06a3fd03710b4dc26 SHA256 1e8c4f5cf1c5edf5fcdbd99376524875658c4dddab56c202f179e09aff3d4405
+MISC ChangeLog 707 RMD160 3a858f5d64aa1a319d5a1dfab51f1d91cb33b341 SHA1 60525a40a630ec6e32a3c9bfe55c1e281730a80f SHA256 61a1767939ead6afabfb95898e1f6c2308279ea5bd4bd5a24fd4341c57d80c9b
 MISC metadata.xml 425 RMD160 b8ef1ea1a3c76b8f3b4201d4fc852e78aea34786 SHA1 e27ac07ca55d9ccb2afa61a980579138274e21ca SHA256 103e328a497f93c98d567ca134c9eea21daead2321703d2a0406228432476169
